Changes method for string reading to java 8 method